--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.knowm.xchart</groupId>
+			<artifactId>xchart</artifactId>
+			<version>3.6.5</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
