--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,21 @@
 			<artifactId>javafx-controls</artifactId>
 			<version>12.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.0-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-swing</artifactId>
+			<version>11-ea+24</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ocpsoft.prettytime</groupId>
+			<artifactId>prettytime</artifactId>
+			<version>4.0.5.Final</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
