--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>12.0.2</version>
+			<version>16</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-web</artifactId>
+			<version>19-ea+2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
