--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
           TARGET_DIR: ${{ secrets.SERVER_TARGET_DIR }}
         run: |
           sudo apt-get install -y sshpass
-          sshpass -p "$PASSWORD" scp -o StrictHostKeyChecking=no -r target/*.jar $USER@$HOST:$TARGET_DIR
-          sshpass -p "$PASSWORD" ssh -o StrictHostKeyChecking=no $USER@$HOST "pkill -f 'java -jar' || true; cd $TARGET_DIR && ./execute.sh &"
+          sshpass -p "$PASSWORD" scp -v -o StrictHostKeyChecking=no -r target/*.jar $USER@$HOST:$TARGET_DIR || exit 1
+          sshpass -p "$PASSWORD" ssh -v -o StrictHostKeyChecking=no $USER@$HOST "pkill -f 'java -jar' || true; cd $TARGET_DIR && ./execute.sh &" || exit 1
