--- a/pom.xml
+++ b/pom.xml
@@ -104,14 +104,14 @@
 			<version>3.3.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.patreon</groupId>
-			<artifactId>patreon</artifactId>
-			<version>0.4.2</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.12.14</version>
 		</dependency>
 	</dependencies>
 	<repositories>
